--- a/crates/graphbuild/Cargo.toml
+++ b/crates/graphbuild/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.0.0"
 edition = "2024"
 
 [dependencies]
-flatbuffers = "24.3.25"
+flatbuffers = "*"
+s2 = "*"
 schema = { path = "../schema" }
