--- a/crates/graphbuild/Cargo.toml
+++ b/crates/graphbuild/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2024"
 flatbuffers = "*"
 s2 = "*"
 schema = { path = "../schema" }
+osmpbfreader = "*"
+rayon = "*"
+anyhow = "*"
+thiserror = "*"
+geo = "*"
+indicatif = "*"
