--- a/cargo.toml
+++ b/cargo.toml
@@ -11,3 +11,6 @@ thiserror = "1.0"
 geo = "0.26"
 indicatif = "0.17"
 tempfile = "3.19"
+tonic = "0.13"
+prost = "0.13"
+tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
