--- a/cargo.toml
+++ b/cargo.toml
@@ -9,7 +9,7 @@ rayon = "1.8"
 anyhow = "1.0"
 thiserror = "1.0"
 geo = "0.26"
-indicatif = "0.17"
+log = "0.4"
 tempfile = "3.19"
 tonic = "0.13"
 prost = "0.13"
