--- a/crates/graphbuild/Cargo.toml
+++ b/crates/graphbuild/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 edition = "2024"
 
 [dependencies]
-flatbuffers = "*"
+flatbuffers = "25.2.10"
 s2 = "*"
 schema = { path = "../schema" }
 osmpbfreader = "*"
