--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -9,6 +9,7 @@ s2 = "*"
 schema = { path = "../schema" }
 tonic = "*"
 prost = "*"
+clap = { version = "4.5", features = ["derive"] }
 tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
