parallelize tile build 32 to 8s
can you make the tile image generation run faster by making making it happen in parallel

--- a/crates/tilebuild/Cargo.toml
+++ b/crates/tilebuild/Cargo.toml
@@ -9,8 +9,9 @@ structopt = "0.3.26"
 s2 = "*"
 schema = { path = "../schema" }
 graphviz = { path = "../graphviz" }
-clap = { version = "4.0", features = ["derive"] }
+clap = { version = "4.4", features = ["derive"] }
 anyhow = "1.0"
+rayon = "1.8"
 
 [lib]
 name = "tilebuild"
