--- a/crates/tilebuild/Cargo.toml
+++ b/crates/tilebuild/Cargo.toml
@@ -12,6 +12,7 @@ graphviz = { path = "../graphviz" }
 clap = { version = "4.4", features = ["derive"] }
 anyhow = "1.0"
 rayon = "1.8"
+image = "0.24"
 
 [lib]
 name = "tilebuild"
