graphviz and tiles dont suck as much, now need to figure out how to render route on top

--- a/crates/graphviz/Cargo.toml
+++ b/crates/graphviz/Cargo.toml
@@ -8,6 +8,7 @@ flatbuffers = "*"
 schema = { path = "../schema" }
 s2 = "*"
 image = "0.24"
+log = "*"
 imageproc = "0.23"
 clap = { version = "4.4", features = ["derive"] }
 anyhow = "*"
