--- a/crates/tilebuild/Cargo.toml
+++ b/crates/tilebuild/Cargo.toml
@@ -12,8 +12,9 @@ graphviz = { path = "../graphviz" }
 clap = { version = "4.4", features = ["derive"] }
 anyhow = "1.0"
 rayon = "1.8"
+log = "*"
 image = "0.24"
-
+env_logger = "*"
 [lib]
 name = "tilebuild"
 path = "src/lib.rs"
