delete bad attempt try a raster
make a webserver in this file that serves static raster map tiles from outputs/tilesrastergraph/{LEVEL}/{X}/{Y}.jpg

Also make html/css/javascript for a google-maps-like application where it loads these raster tiles at various zoom levels (1-10 inclusive). The user should be able to pan around the map and click zoom in or out to change the level.

Put the static assets in crates/website/raster directory

--- a/crates/website/Cargo.toml
+++ b/crates/website/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2024"
 [dependencies]
 actix-web = "4.10.2"
 actix-files = "0.6.6"
+
+[[bin]]
+name = "websitevector"
+path = "src/vector.rs"
+
+
+[[bin]]
+name = "websiteraster"
+path = "src/raster.rs"
