--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4.5", features = ["derive"] }
 tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
 log = "*"
 env_logger = "*"
+anyhow = "*"
 
 [build-dependencies]
 tonic-build = "*"
